orchestra.output
Terminals unused in grammar

   FIXED
   ENSEMBLE
   PLAY
   SCORE
   TYPE_INT
   TYPE_FLOAT
   TYPE_BOOL
   TYPE_STRING


Grammar

    0 $accept: program $end

    1 program: program flow_definition
    2        | /* empty */

    3 flow_definition: FLOW IDENTIFIER parameter_part block

    4 parameter_part: TAKE LPAREN parameter_list_opt RPAREN
    5               | /* empty */

    6 parameter_list_opt: parameter_list
    7                   | /* empty */

    8 parameter_list: parameter_list COMMA IDENTIFIER
    9               | IDENTIFIER

   10 block: LBRACE statement_list RBRACE

   11 statement_list: statement_list statement
   12               | /* empty */

   13 statement: NOTE IDENTIFIER ASSIGN expression SEMICOLON
   14          | STAGE IDENTIFIER ASSIGN expression SEMICOLON
   15          | EMIT expression SEMICOLON
   16          | RETURN expression SEMICOLON
   17          | RETURN SEMICOLON
   18          | IDENTIFIER LPAREN arg_list_opt RPAREN SEMICOLON
   19          | BREAK SEMICOLON
   20          | CONTINUE SEMICOLON
   21          | branch_statement
   22          | repeat_statement

   23 branch_statement: BRANCH LPAREN expression RPAREN block
   24                 | BRANCH LPAREN expression RPAREN block ELSEWISE block

   25 repeat_statement: REPEAT LPAREN expression RPAREN block

   26 expression: logic_or

   27 logic_or: logic_or OR logic_and
   28         | logic_and

   29 logic_and: logic_and AND equality
   30          | equality

   31 equality: equality EQ relational
   32         | equality NE relational
   33         | relational

   34 relational: additive rel_tail

   35 rel_tail: rel_tail relop additive
   36         | /* empty */

   37 relop: LT
   38      | LE
   39      | GT
   40      | GE

   41 additive: additive PLUS term
   42         | additive MINUS term
   43         | term

   44 term: term MUL unary
   45     | term DIV unary
   46     | unary

   47 unary: MINUS unary
   48      | NOT unary
   49      | primary

   50 primary: LPAREN expression RPAREN
   51        | TRUE
   52        | FALSE
   53        | NUMBER
   54        | STRING_LITERAL
   55        | IDENTIFIER LPAREN arg_list_opt RPAREN
   56        | IDENTIFIER

   57 arg_list_opt: arg_list
   58             | /* empty */

   59 arg_list: arg_list COMMA expression
   60         | expression


Terminals, with rules where they appear

$end (0) 0
error (256)
FLOW (258) 3
TAKE (259) 4
EMIT (260) 15
RETURN (261) 16 17
NOTE (262) 13
FIXED (263)
STAGE (264) 14
ENSEMBLE (265)
PLAY (266)
BRANCH (267) 23 24
ELSEWISE (268) 24
REPEAT (269) 25
SCORE (270)
TYPE_INT (271)
TYPE_FLOAT (272)
TYPE_BOOL (273)
TYPE_STRING (274)
TRUE (275) 51
FALSE (276) 52
BREAK (277) 19
CONTINUE (278) 20
EQ (279) 31
NE (280) 32
ASSIGN (281) 13 14
AND (282) 29
OR (283) 27
PLUS (284) 41
MINUS (285) 42 47
MUL (286) 44
DIV (287) 45
LT (288) 37
LE (289) 38
GT (290) 39
GE (291) 40
NOT (292) 48
SEMICOLON (293) 13 14 15 16 17 18 19 20
COMMA (294) 8 59
LPAREN (295) 4 18 23 24 25 50 55
RPAREN (296) 4 18 23 24 25 50 55
LBRACE (297) 10
RBRACE (298) 10
NUMBER (299) 53
STRING_LITERAL (300) 54
IDENTIFIER (301) 3 8 9 13 14 18 55 56
UMINUS (302)


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1 2, on right: 0 1
flow_definition (50)
    on left: 3, on right: 1
parameter_part (51)
    on left: 4 5, on right: 3
parameter_list_opt (52)
    on left: 6 7, on right: 4
parameter_list (53)
    on left: 8 9, on right: 6 8
block (54)
    on left: 10, on right: 3 23 24 25
statement_list (55)
    on left: 11 12, on right: 10 11
statement (56)
    on left: 13 14 15 16 17 18 19 20 21 22, on right: 11
branch_statement (57)
    on left: 23 24, on right: 21
repeat_statement (58)
    on left: 25, on right: 22
expression (59)
    on left: 26, on right: 13 14 15 16 23 24 25 50 59 60
logic_or (60)
    on left: 27 28, on right: 26 27
logic_and (61)
    on left: 29 30, on right: 27 28 29
equality (62)
    on left: 31 32 33, on right: 29 30 31 32
relational (63)
    on left: 34, on right: 31 32 33
rel_tail (64)
    on left: 35 36, on right: 34 35
relop (65)
    on left: 37 38 39 40, on right: 35
additive (66)
    on left: 41 42 43, on right: 34 35 41 42
term (67)
    on left: 44 45 46, on right: 41 42 43 44 45
unary (68)
    on left: 47 48 49, on right: 44 45 46 47 48
primary (69)
    on left: 50 51 52 53 54 55 56, on right: 49
arg_list_opt (70)
    on left: 57 58, on right: 18 55
arg_list (71)
    on left: 59 60, on right: 57 59


state 0

    0 $accept: . program $end

    $default  reduce using rule 2 (program)

    program  go to state 1


state 1

    0 $accept: program . $end
    1 program: program . flow_definition

    $end  shift, and go to state 2
    FLOW  shift, and go to state 3

    flow_definition  go to state 4


state 2

    0 $accept: program $end .

    $default  accept


state 3

    3 flow_definition: FLOW . IDENTIFIER parameter_part block

    IDENTIFIER  shift, and go to state 5


state 4

    1 program: program flow_definition .

    $default  reduce using rule 1 (program)


state 5

    3 flow_definition: FLOW IDENTIFIER . parameter_part block

    TAKE  shift, and go to state 6

    $default  reduce using rule 5 (parameter_part)

    parameter_part  go to state 7


state 6

    4 parameter_part: TAKE . LPAREN parameter_list_opt RPAREN

    LPAREN  shift, and go to state 8


state 7

    3 flow_definition: FLOW IDENTIFIER parameter_part . block

    LBRACE  shift, and go to state 9

    block  go to state 10


state 8

    4 parameter_part: TAKE LPAREN . parameter_list_opt RPAREN

    IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 7 (parameter_list_opt)

    parameter_list_opt  go to state 12
    parameter_list      go to state 13


state 9

   10 block: LBRACE . statement_list RBRACE

    $default  reduce using rule 12 (statement_list)

    statement_list  go to state 14


state 10

    3 flow_definition: FLOW IDENTIFIER parameter_part block .

    $default  reduce using rule 3 (flow_definition)


state 11

    9 parameter_list: IDENTIFIER .

    $default  reduce using rule 9 (parameter_list)


state 12

    4 parameter_part: TAKE LPAREN parameter_list_opt . RPAREN

    RPAREN  shift, and go to state 15


state 13

    6 parameter_list_opt: parameter_list .
    8 parameter_list: parameter_list . COMMA IDENTIFIER

    COMMA  shift, and go to state 16

    $default  reduce using rule 6 (parameter_list_opt)


state 14

   10 block: LBRACE statement_list . RBRACE
   11 statement_list: statement_list . statement

    EMIT        shift, and go to state 17
    RETURN      shift, and go to state 18
    NOTE        shift, and go to state 19
    STAGE       shift, and go to state 20
    BRANCH      shift, and go to state 21
    REPEAT      shift, and go to state 22
    BREAK       shift, and go to state 23
    CONTINUE    shift, and go to state 24
    RBRACE      shift, and go to state 25
    IDENTIFIER  shift, and go to state 26

    statement         go to state 27
    branch_statement  go to state 28
    repeat_statement  go to state 29


state 15

    4 parameter_part: TAKE LPAREN parameter_list_opt RPAREN .

    $default  reduce using rule 4 (parameter_part)


state 16

    8 parameter_list: parameter_list COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 30


state 17

   15 statement: EMIT . expression SEMICOLON

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    expression  go to state 39
    logic_or    go to state 40
    logic_and   go to state 41
    equality    go to state 42
    relational  go to state 43
    additive    go to state 44
    term        go to state 45
    unary       go to state 46
    primary     go to state 47


state 18

   16 statement: RETURN . expression SEMICOLON
   17          | RETURN . SEMICOLON

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    SEMICOLON       shift, and go to state 48
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    expression  go to state 49
    logic_or    go to state 40
    logic_and   go to state 41
    equality    go to state 42
    relational  go to state 43
    additive    go to state 44
    term        go to state 45
    unary       go to state 46
    primary     go to state 47


state 19

   13 statement: NOTE . IDENTIFIER ASSIGN expression SEMICOLON

    IDENTIFIER  shift, and go to state 50


state 20

   14 statement: STAGE . IDENTIFIER ASSIGN expression SEMICOLON

    IDENTIFIER  shift, and go to state 51


state 21

   23 branch_statement: BRANCH . LPAREN expression RPAREN block
   24                 | BRANCH . LPAREN expression RPAREN block ELSEWISE block

    LPAREN  shift, and go to state 52


state 22

   25 repeat_statement: REPEAT . LPAREN expression RPAREN block

    LPAREN  shift, and go to state 53


state 23

   19 statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 54


state 24

   20 statement: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 55


state 25

   10 block: LBRACE statement_list RBRACE .

    $default  reduce using rule 10 (block)


state 26

   18 statement: IDENTIFIER . LPAREN arg_list_opt RPAREN SEMICOLON

    LPAREN  shift, and go to state 56


state 27

   11 statement_list: statement_list statement .

    $default  reduce using rule 11 (statement_list)


state 28

   21 statement: branch_statement .

    $default  reduce using rule 21 (statement)


state 29

   22 statement: repeat_statement .

    $default  reduce using rule 22 (statement)


state 30

    8 parameter_list: parameter_list COMMA IDENTIFIER .

    $default  reduce using rule 8 (parameter_list)


state 31

   51 primary: TRUE .

    $default  reduce using rule 51 (primary)


state 32

   52 primary: FALSE .

    $default  reduce using rule 52 (primary)


state 33

   47 unary: MINUS . unary

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    unary    go to state 57
    primary  go to state 47


state 34

   48 unary: NOT . unary

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    unary    go to state 58
    primary  go to state 47


state 35

   50 primary: LPAREN . expression RPAREN

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    expression  go to state 59
    logic_or    go to state 40
    logic_and   go to state 41
    equality    go to state 42
    relational  go to state 43
    additive    go to state 44
    term        go to state 45
    unary       go to state 46
    primary     go to state 47


state 36

   53 primary: NUMBER .

    $default  reduce using rule 53 (primary)


state 37

   54 primary: STRING_LITERAL .

    $default  reduce using rule 54 (primary)


state 38

   55 primary: IDENTIFIER . LPAREN arg_list_opt RPAREN
   56        | IDENTIFIER .

    LPAREN  shift, and go to state 60

    $default  reduce using rule 56 (primary)


state 39

   15 statement: EMIT expression . SEMICOLON

    SEMICOLON  shift, and go to state 61


state 40

   26 expression: logic_or .
   27 logic_or: logic_or . OR logic_and

    OR  shift, and go to state 62

    $default  reduce using rule 26 (expression)


state 41

   28 logic_or: logic_and .
   29 logic_and: logic_and . AND equality

    AND  shift, and go to state 63

    $default  reduce using rule 28 (logic_or)


state 42

   30 logic_and: equality .
   31 equality: equality . EQ relational
   32         | equality . NE relational

    EQ  shift, and go to state 64
    NE  shift, and go to state 65

    $default  reduce using rule 30 (logic_and)


state 43

   33 equality: relational .

    $default  reduce using rule 33 (equality)


state 44

   34 relational: additive . rel_tail
   41 additive: additive . PLUS term
   42         | additive . MINUS term

    PLUS   shift, and go to state 66
    MINUS  shift, and go to state 67

    $default  reduce using rule 36 (rel_tail)

    rel_tail  go to state 68


state 45

   43 additive: term .
   44 term: term . MUL unary
   45     | term . DIV unary

    MUL  shift, and go to state 69
    DIV  shift, and go to state 70

    $default  reduce using rule 43 (additive)


state 46

   46 term: unary .

    $default  reduce using rule 46 (term)


state 47

   49 unary: primary .

    $default  reduce using rule 49 (unary)


state 48

   17 statement: RETURN SEMICOLON .

    $default  reduce using rule 17 (statement)


state 49

   16 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 71


state 50

   13 statement: NOTE IDENTIFIER . ASSIGN expression SEMICOLON

    ASSIGN  shift, and go to state 72


state 51

   14 statement: STAGE IDENTIFIER . ASSIGN expression SEMICOLON

    ASSIGN  shift, and go to state 73


state 52

   23 branch_statement: BRANCH LPAREN . expression RPAREN block
   24                 | BRANCH LPAREN . expression RPAREN block ELSEWISE block

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    expression  go to state 74
    logic_or    go to state 40
    logic_and   go to state 41
    equality    go to state 42
    relational  go to state 43
    additive    go to state 44
    term        go to state 45
    unary       go to state 46
    primary     go to state 47


state 53

   25 repeat_statement: REPEAT LPAREN . expression RPAREN block

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    expression  go to state 75
    logic_or    go to state 40
    logic_and   go to state 41
    equality    go to state 42
    relational  go to state 43
    additive    go to state 44
    term        go to state 45
    unary       go to state 46
    primary     go to state 47


state 54

   19 statement: BREAK SEMICOLON .

    $default  reduce using rule 19 (statement)


state 55

   20 statement: CONTINUE SEMICOLON .

    $default  reduce using rule 20 (statement)


state 56

   18 statement: IDENTIFIER LPAREN . arg_list_opt RPAREN SEMICOLON

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    $default  reduce using rule 58 (arg_list_opt)

    expression    go to state 76
    logic_or      go to state 40
    logic_and     go to state 41
    equality      go to state 42
    relational    go to state 43
    additive      go to state 44
    term          go to state 45
    unary         go to state 46
    primary       go to state 47
    arg_list_opt  go to state 77
    arg_list      go to state 78


state 57

   47 unary: MINUS unary .

    $default  reduce using rule 47 (unary)


state 58

   48 unary: NOT unary .

    $default  reduce using rule 48 (unary)


state 59

   50 primary: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 79


state 60

   55 primary: IDENTIFIER LPAREN . arg_list_opt RPAREN

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    $default  reduce using rule 58 (arg_list_opt)

    expression    go to state 76
    logic_or      go to state 40
    logic_and     go to state 41
    equality      go to state 42
    relational    go to state 43
    additive      go to state 44
    term          go to state 45
    unary         go to state 46
    primary       go to state 47
    arg_list_opt  go to state 80
    arg_list      go to state 78


state 61

   15 statement: EMIT expression SEMICOLON .

    $default  reduce using rule 15 (statement)


state 62

   27 logic_or: logic_or OR . logic_and

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    logic_and   go to state 81
    equality    go to state 42
    relational  go to state 43
    additive    go to state 44
    term        go to state 45
    unary       go to state 46
    primary     go to state 47


state 63

   29 logic_and: logic_and AND . equality

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    equality    go to state 82
    relational  go to state 43
    additive    go to state 44
    term        go to state 45
    unary       go to state 46
    primary     go to state 47


state 64

   31 equality: equality EQ . relational

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    relational  go to state 83
    additive    go to state 44
    term        go to state 45
    unary       go to state 46
    primary     go to state 47


state 65

   32 equality: equality NE . relational

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    relational  go to state 84
    additive    go to state 44
    term        go to state 45
    unary       go to state 46
    primary     go to state 47


state 66

   41 additive: additive PLUS . term

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    term     go to state 85
    unary    go to state 46
    primary  go to state 47


state 67

   42 additive: additive MINUS . term

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    term     go to state 86
    unary    go to state 46
    primary  go to state 47


state 68

   34 relational: additive rel_tail .
   35 rel_tail: rel_tail . relop additive

    LT  shift, and go to state 87
    LE  shift, and go to state 88
    GT  shift, and go to state 89
    GE  shift, and go to state 90

    $default  reduce using rule 34 (relational)

    relop  go to state 91


state 69

   44 term: term MUL . unary

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    unary    go to state 92
    primary  go to state 47


state 70

   45 term: term DIV . unary

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    unary    go to state 93
    primary  go to state 47


state 71

   16 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 16 (statement)


state 72

   13 statement: NOTE IDENTIFIER ASSIGN . expression SEMICOLON

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    expression  go to state 94
    logic_or    go to state 40
    logic_and   go to state 41
    equality    go to state 42
    relational  go to state 43
    additive    go to state 44
    term        go to state 45
    unary       go to state 46
    primary     go to state 47


state 73

   14 statement: STAGE IDENTIFIER ASSIGN . expression SEMICOLON

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    expression  go to state 95
    logic_or    go to state 40
    logic_and   go to state 41
    equality    go to state 42
    relational  go to state 43
    additive    go to state 44
    term        go to state 45
    unary       go to state 46
    primary     go to state 47


state 74

   23 branch_statement: BRANCH LPAREN expression . RPAREN block
   24                 | BRANCH LPAREN expression . RPAREN block ELSEWISE block

    RPAREN  shift, and go to state 96


state 75

   25 repeat_statement: REPEAT LPAREN expression . RPAREN block

    RPAREN  shift, and go to state 97


state 76

   60 arg_list: expression .

    $default  reduce using rule 60 (arg_list)


state 77

   18 statement: IDENTIFIER LPAREN arg_list_opt . RPAREN SEMICOLON

    RPAREN  shift, and go to state 98


state 78

   57 arg_list_opt: arg_list .
   59 arg_list: arg_list . COMMA expression

    COMMA  shift, and go to state 99

    $default  reduce using rule 57 (arg_list_opt)


state 79

   50 primary: LPAREN expression RPAREN .

    $default  reduce using rule 50 (primary)


state 80

   55 primary: IDENTIFIER LPAREN arg_list_opt . RPAREN

    RPAREN  shift, and go to state 100


state 81

   27 logic_or: logic_or OR logic_and .
   29 logic_and: logic_and . AND equality

    AND  shift, and go to state 63

    $default  reduce using rule 27 (logic_or)


state 82

   29 logic_and: logic_and AND equality .
   31 equality: equality . EQ relational
   32         | equality . NE relational

    EQ  shift, and go to state 64
    NE  shift, and go to state 65

    $default  reduce using rule 29 (logic_and)


state 83

   31 equality: equality EQ relational .

    $default  reduce using rule 31 (equality)


state 84

   32 equality: equality NE relational .

    $default  reduce using rule 32 (equality)


state 85

   41 additive: additive PLUS term .
   44 term: term . MUL unary
   45     | term . DIV unary

    MUL  shift, and go to state 69
    DIV  shift, and go to state 70

    $default  reduce using rule 41 (additive)


state 86

   42 additive: additive MINUS term .
   44 term: term . MUL unary
   45     | term . DIV unary

    MUL  shift, and go to state 69
    DIV  shift, and go to state 70

    $default  reduce using rule 42 (additive)


state 87

   37 relop: LT .

    $default  reduce using rule 37 (relop)


state 88

   38 relop: LE .

    $default  reduce using rule 38 (relop)


state 89

   39 relop: GT .

    $default  reduce using rule 39 (relop)


state 90

   40 relop: GE .

    $default  reduce using rule 40 (relop)


state 91

   35 rel_tail: rel_tail relop . additive

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    additive  go to state 101
    term      go to state 45
    unary     go to state 46
    primary   go to state 47


state 92

   44 term: term MUL unary .

    $default  reduce using rule 44 (term)


state 93

   45 term: term DIV unary .

    $default  reduce using rule 45 (term)


state 94

   13 statement: NOTE IDENTIFIER ASSIGN expression . SEMICOLON

    SEMICOLON  shift, and go to state 102


state 95

   14 statement: STAGE IDENTIFIER ASSIGN expression . SEMICOLON

    SEMICOLON  shift, and go to state 103


state 96

   23 branch_statement: BRANCH LPAREN expression RPAREN . block
   24                 | BRANCH LPAREN expression RPAREN . block ELSEWISE block

    LBRACE  shift, and go to state 9

    block  go to state 104


state 97

   25 repeat_statement: REPEAT LPAREN expression RPAREN . block

    LBRACE  shift, and go to state 9

    block  go to state 105


state 98

   18 statement: IDENTIFIER LPAREN arg_list_opt RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 106


state 99

   59 arg_list: arg_list COMMA . expression

    TRUE            shift, and go to state 31
    FALSE           shift, and go to state 32
    MINUS           shift, and go to state 33
    NOT             shift, and go to state 34
    LPAREN          shift, and go to state 35
    NUMBER          shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    IDENTIFIER      shift, and go to state 38

    expression  go to state 107
    logic_or    go to state 40
    logic_and   go to state 41
    equality    go to state 42
    relational  go to state 43
    additive    go to state 44
    term        go to state 45
    unary       go to state 46
    primary     go to state 47


state 100

   55 primary: IDENTIFIER LPAREN arg_list_opt RPAREN .

    $default  reduce using rule 55 (primary)


state 101

   35 rel_tail: rel_tail relop additive .
   41 additive: additive . PLUS term
   42         | additive . MINUS term

    PLUS   shift, and go to state 66
    MINUS  shift, and go to state 67

    $default  reduce using rule 35 (rel_tail)


state 102

   13 statement: NOTE IDENTIFIER ASSIGN expression SEMICOLON .

    $default  reduce using rule 13 (statement)


state 103

   14 statement: STAGE IDENTIFIER ASSIGN expression SEMICOLON .

    $default  reduce using rule 14 (statement)


state 104

   23 branch_statement: BRANCH LPAREN expression RPAREN block .
   24                 | BRANCH LPAREN expression RPAREN block . ELSEWISE block

    ELSEWISE  shift, and go to state 108

    $default  reduce using rule 23 (branch_statement)


state 105

   25 repeat_statement: REPEAT LPAREN expression RPAREN block .

    $default  reduce using rule 25 (repeat_statement)


state 106

   18 statement: IDENTIFIER LPAREN arg_list_opt RPAREN SEMICOLON .

    $default  reduce using rule 18 (statement)


state 107

   59 arg_list: arg_list COMMA expression .

    $default  reduce using rule 59 (arg_list)


state 108

   24 branch_statement: BRANCH LPAREN expression RPAREN block ELSEWISE . block

    LBRACE  shift, and go to state 9

    block  go to state 109


state 109

   24 branch_statement: BRANCH LPAREN expression RPAREN block ELSEWISE block .

    $default  reduce using rule 24 (branch_statement)
